src/test/ui/nll/mir_check_cast_reify.stderr
error: unsatisfied lifetime constraints
  --> $DIR/mir_check_cast_reify.rs:46:25
   |
LL | fn bar<'a>(x: &'a u32) -> &'static u32 {
   |        -- lifetime `'a` defined here
...
LL |     let f: fn(_) -> _ = foo;
   |                         ^^^ cast requires that `'a` must outlive `'static`

error: aborting due to previous error

